// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConferenceStartDateFilter renders with selection: a date range 1`] = `
<Row
  className="pa3 bg-white mb3"
  gutter={0}
>
  <AggregationBox
    headerAction={null}
    name="Start Date"
  >
    <Row
      align="middle"
      className="mb3"
      gutter={8}
      type="flex"
    >
      <Col>
        <Switch
          checked={false}
          onAnimationEnd={[Function]}
          onChange={[Function]}
        />
      </Col>
      <Col>
        Upcoming conferences
      </Col>
    </Row>
    <DateRangeFilter
      onChange={[Function]}
      range="2019-05-05--2020-01-01"
    />
  </AggregationBox>
</Row>
`;

exports[`ConferenceStartDateFilter renders with selection: all 1`] = `
<Row
  className="pa3 bg-white mb3"
  gutter={0}
>
  <AggregationBox
    headerAction={null}
    name="Start Date"
  >
    <Row
      align="middle"
      className="mb3"
      gutter={8}
      type="flex"
    >
      <Col>
        <Switch
          checked={false}
          onAnimationEnd={[Function]}
          onChange={[Function]}
        />
      </Col>
      <Col>
        Upcoming conferences
      </Col>
    </Row>
    <DateRangeFilter
      onChange={[Function]}
      range=""
    />
  </AggregationBox>
</Row>
`;

exports[`ConferenceStartDateFilter renders with selection: upcoming 1`] = `
<Row
  className="pa3 bg-white mb3"
  gutter={0}
>
  <AggregationBox
    headerAction={null}
    name="Start Date"
  >
    <Row
      align="middle"
      className="mb3"
      gutter={8}
      type="flex"
    >
      <Col>
        <Switch
          checked={true}
          onAnimationEnd={[Function]}
          onChange={[Function]}
        />
      </Col>
      <Col>
        Upcoming conferences
      </Col>
    </Row>
    <DateRangeFilter
      onChange={[Function]}
      range=""
    />
  </AggregationBox>
</Row>
`;

exports[`ConferenceStartDateFilter renders without selection 1`] = `
<Row
  className="pa3 bg-white mb3"
  gutter={0}
>
  <AggregationBox
    headerAction={null}
    name="Start Date"
  >
    <Row
      align="middle"
      className="mb3"
      gutter={8}
      type="flex"
    >
      <Col>
        <Switch
          checked={false}
          onAnimationEnd={[Function]}
          onChange={[Function]}
        />
      </Col>
      <Col>
        Upcoming conferences
      </Col>
    </Row>
    <DateRangeFilter
      onChange={[Function]}
      range=""
    />
  </AggregationBox>
</Row>
`;
